{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 50,
  "lineage": "4828753a-12af-9d5d-d728-884c62454a4f",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:loadbalancer/app/TF-task-load-balancer/9d3a70ce2de716a4",
            "arn_suffix": "app/TF-task-load-balancer/9d3a70ce2de716a4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "TF-task-load-balancer-1687587467.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:loadbalancer/app/TF-task-load-balancer/9d3a70ce2de716a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "TF-task-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07eb930aa3abdac6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cebe310ccc4bcb4d"
              },
              {
                "subnet_id": "subnet-0f7a2b4e540d0c105"
              },
              {
                "subnet_id": "subnet-0fcaf393e85de0e26"
              }
            ],
            "subnets": [
              "subnet-0cebe310ccc4bcb4d",
              "subnet-0f7a2b4e540d0c105",
              "subnet-0fcaf393e85de0e26"
            ],
            "vpc_id": "vpc-08460a6ddcff82c26",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:listener/app/TF-task-load-balancer/9d3a70ce2de716a4/35a4ea90bfb83b52",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:targetgroup/TF-task-target-group/8ad644e6af82a4ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:listener/app/TF-task-load-balancer/9d3a70ce2de716a4/35a4ea90bfb83b52",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:loadbalancer/app/TF-task-load-balancer/9d3a70ce2de716a4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.main",
            "module.ecs.aws_alb_target_group.app",
            "module.ecs.aws_security_group.lb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:targetgroup/TF-task-target-group/8ad644e6af82a4ad",
            "arn_suffix": "targetgroup/TF-task-target-group/8ad644e6af82a4ad",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:826971144375:targetgroup/TF-task-target-group/8ad644e6af82a4ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TF-task-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:security-group/sg-0d7406fd74079de16",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7406fd74079de16",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TF-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "826971144375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:security-group/sg-07eb930aa3abdac6b",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eb930aa3abdac6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "TF-task-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "826971144375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5d91a49cce7950c",
            "association_id": "eipassoc-0f2af48cf3ad381a1",
            "domain": "vpc",
            "id": "eipalloc-0d5d91a49cce7950c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c403cab063249697",
            "private_dns": "ip-172-21-3-157.ap-south-1.compute.internal",
            "private_ip": "172.21.3.157",
            "public_dns": "ec2-3-6-16-190.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.16.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TF-EIP"
            },
            "tags_all": {
              "Name": "TF-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff097faf541bd1b6",
            "association_id": "eipassoc-0f491da2d426b3527",
            "domain": "vpc",
            "id": "eipalloc-0ff097faf541bd1b6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-013534cadd265eb80",
            "private_dns": "ip-172-21-3-49.ap-south-1.compute.internal",
            "private_ip": "172.21.3.49",
            "public_dns": "ec2-13-127-235-234.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.235.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TF-EIP"
            },
            "tags_all": {
              "Name": "TF-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073b705341419ffd7",
            "association_id": "eipassoc-07187ff3750f508bc",
            "domain": "vpc",
            "id": "eipalloc-073b705341419ffd7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01f3ae9eb0f21a5be",
            "private_dns": "ip-172-21-3-185.ap-south-1.compute.internal",
            "private_ip": "172.21.3.185",
            "public_dns": "ec2-13-235-88-227.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.88.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TF-EIP"
            },
            "tags_all": {
              "Name": "TF-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:internet-gateway/igw-0fc4cfd05cdddd41d",
            "id": "igw-0fc4cfd05cdddd41d",
            "owner_id": "826971144375",
            "tags": {
              "Name": "TF-IGW"
            },
            "tags_all": {
              "Name": "TF-IGW"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5d91a49cce7950c",
            "connectivity_type": "public",
            "id": "nat-04c84e7770794d7bd",
            "network_interface_id": "eni-0c403cab063249697",
            "private_ip": "172.21.3.157",
            "public_ip": "3.6.16.190",
            "subnet_id": "subnet-0f7a2b4e540d0c105",
            "tags": {
              "Name": "TF-NAT-GW"
            },
            "tags_all": {
              "Name": "TF-NAT-GW"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff097faf541bd1b6",
            "connectivity_type": "public",
            "id": "nat-0f79c3225aaa25c43",
            "network_interface_id": "eni-0c66ae7e57084852d",
            "private_ip": "172.21.4.177",
            "public_ip": "13.127.235.234",
            "subnet_id": "subnet-0fcaf393e85de0e26",
            "tags": {
              "Name": "TF-NAT-GW"
            },
            "tags_all": {
              "Name": "TF-NAT-GW"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073b705341419ffd7",
            "connectivity_type": "public",
            "id": "nat-0c325adb2229cfe9a",
            "network_interface_id": "eni-074c3366bff90bd65",
            "private_ip": "172.21.5.207",
            "public_ip": "13.235.88.227",
            "subnet_id": "subnet-0cebe310ccc4bcb4d",
            "tags": {
              "Name": "TF-NAT-GW"
            },
            "tags_all": {
              "Name": "TF-NAT-GW"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc4cfd05cdddd41d",
            "id": "r-rtb-0e243176045ccb2e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e243176045ccb2e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:route-table/rtb-0d61c380b36f61339",
            "id": "rtb-0d61c380b36f61339",
            "owner_id": "826971144375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c84e7770794d7bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:route-table/rtb-04da8c913f6f454c7",
            "id": "rtb-04da8c913f6f454c7",
            "owner_id": "826971144375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f79c3225aaa25c43",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:route-table/rtb-00ebcb28cbcad227c",
            "id": "rtb-00ebcb28cbcad227c",
            "owner_id": "826971144375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c325adb2229cfe9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03336dc1504060422",
            "route_table_id": "rtb-0d61c380b36f61339",
            "subnet_id": "subnet-0dfbecda23578a05e"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecff8f96ca07fd40",
            "route_table_id": "rtb-04da8c913f6f454c7",
            "subnet_id": "subnet-01daab0483c674144"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b7c264a43902745",
            "route_table_id": "rtb-00ebcb28cbcad227c",
            "subnet_id": "subnet-081e284aa4c9e3733"
          },
          "dependencies": [
            "module.networking.aws_eip.gw",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_nat_gateway.gw",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-0dfbecda23578a05e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.21.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfbecda23578a05e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pri-Sub"
            },
            "tags_all": {
              "Name": "TF-Pri-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-01daab0483c674144",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01daab0483c674144",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pri-Sub"
            },
            "tags_all": {
              "Name": "TF-Pri-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-081e284aa4c9e3733",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.21.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e284aa4c9e3733",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pri-Sub"
            },
            "tags_all": {
              "Name": "TF-Pri-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-0f7a2b4e540d0c105",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7a2b4e540d0c105",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pub-Sub"
            },
            "tags_all": {
              "Name": "TF-Pub-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-0fcaf393e85de0e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.21.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcaf393e85de0e26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pub-Sub"
            },
            "tags_all": {
              "Name": "TF-Pub-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:subnet/subnet-0cebe310ccc4bcb4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.21.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cebe310ccc4bcb4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826971144375",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-Pub-Sub"
            },
            "tags_all": {
              "Name": "TF-Pub-Sub"
            },
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:vpc/vpc-08460a6ddcff82c26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-00d5129b93f257b0d",
            "default_route_table_id": "rtb-0e243176045ccb2e9",
            "default_security_group_id": "sg-0a47d112fb08e7594",
            "dhcp_options_id": "dopt-0b9ab5a581dd3f964",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08460a6ddcff82c26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e243176045ccb2e9",
            "owner_id": "826971144375",
            "tags": {
              "Name": "TF-VPC"
            },
            "tags_all": {
              "Name": "TF-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:security-group/sg-0586e22fdc8deaf92",
            "description": "Allow access to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0586e22fdc8deaf92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db-access-sg",
            "name_prefix": "",
            "owner_id": "826971144375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:826971144375:security-group/sg-01e196b162d5e9275",
            "description": "Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e196b162d5e9275",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "826971144375",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08460a6ddcff82c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}